unpackaged/main/default/objects/ETST_System_Variables__mdt/ETST_System_Variables__mdt.object-meta.xml
<CustomObject>
    <label>ETST System Variables</label>
    <pluralLabel>ETST_System_Variables</pluralLabel>
</CustomObject>