unpackaged/main/default/objects/ETST_System_Variables__mdt/fields/ETST_H1_Duration__c.field-meta.xml
<CustomField>
    <fullName>ETST_H1_Duration__c</fullName>
    <label>H1 Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>