unpackaged/main/default/objects/ETST_System_Variables__mdt/fields/ETST_Q2_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>ETST_Q2_Start_Month__c</fullName>
    <label>Q2 Start Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>